--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <section id="main_content" class="inner">
         <h3>
 <a name="niffdycom" class="anchor" href="#niffdycom"><span class="octicon octicon-link"></span></a>niffdy.com</h3>
+<a name="niffdycom" class="anchor" href="#niffdycom"><span class="octicon octicon-link"></span></a>a niffdy place to be</h3>
 
 <p>Seeking Success</p>
       </section>
